--- a/style.css
+++ b/style.css
@@ -30,7 +30,9 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+/* styling of the navigation list on top right of header */
+
+.header nav {
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
@@ -38,11 +40,11 @@ body {
     padding-top: 15px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
